# PhotoEditor

./: .gitignore  CMakeLists.txt  main.cpp  photoeditormainwindow.cpp  photoeditormainwindow.h  photoeditormainwindow.ui
Coordinates/: Coordinates.cpp  Coordinates.h
Error/: error.h
Image/: Image.cpp  Image.h
Operator/: Operator.cpp  Operator.h  OperatorFactory.h  OperatorQueue.cpp  OperatorQueue.h
PhotoEditor/: PhotoEditor.h
Thread/: ReadRunable.h
ToolBar/: ToolBar.cpp  ToolBar.h
Widget/: ControlBaseBox.cpp  ControlBaseBox.h  PainterWidget.cpp  PainterWidget.h
WorkSpace/: workspace.cpp  workspace.h
